--- a/app/globals.css
+++ b/app/globals.css
@@ -129,4 +129,9 @@
   .card-gradient {
     @apply border-2 border-blue-200 dark:border-blue-800 hover:border-blue-400 hover:shadow-2xl dark:hover:border-blue-600 transition-all duration-300 bg-linear-to-br from-blue-50/50 to-cyan-50/50 dark:from-blue-950/50 dark:to-cyan-950/50
   }
+  
+  /* FORM ELEMENTS */
+  .input-form {
+    @apply pl-14 h-14 text-base border-2 border-blue-200 dark:border-blue-800 focus:border-blue-400 dark:focus:border-blue-400 bg-white/80 dark:bg-gray-900/80 backdrop-blur-sm shadow-sm w-full;
+  }
 }
